@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-03T01:05:40Z",
-  "count_outdated" : 861,
-  "uniques_outdated" : 468,
-  "count" : 875,
-  "uniques" : 482,
+  "timestamp" : "2025-03-04T01:04:24Z",
+  "count_outdated" : 862,
+  "uniques_outdated" : 469,
+  "count" : 876,
+  "uniques" : 483,
   "clones" : [
-    {
-      "timestamp": "2025-02-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-19T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
